common-applications/test-environment/openeuler-sbom-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-sbom-service
  name: openeuler-sbom-service
