common-applications/test-environment/openeuler-sbom-service/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sbom-deployment
  namespace: openeuler-sbom-service
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sbom-deployment
  template:
    metadata:
      labels:
        app: sbom-deployment
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: sbom-service
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-sbom-service-test:0bc3b1e0704882bb631bd778f9939439569b26b0
        resources:
          requests:
            cpu: 4000m
            memory: 8000Mi
          limits:
            cpu: 4000m
            memory: 8000Mi
        volumeMounts:
        - mountPath: /var/db_secrets
          name: db-secret
        - mountPath: /signatrust/.data/tempdir
          name: data-volume
          subPath: tempdir
        - mountPath: /signatrust/.data/client
          name: data-volume
          subPath: client
        - mountPath: /signatrust/.data/certs/client/server.crt
          name: sbom-secret
          subPath: ca-crt
        - mountPath: /signatrust/.data/certs/client/server.key
          name: sbom-secret
          subPath: ca-key
        - mountPath: /signatrust/.data/certs/client/client.toml
          name: sbom-secret
          subPath: client-toml
      volumes:
      - name: db-secret
        secret:
          secretName: sbom-server-db-secrets
      - name: data-volume
        persistentVolumeClaim:
          claimName: client-volume
      - name: sbom-secret
        secret:
          secretName: sbom-server-secrets
