common-applications/test-environment/openeuler-sbom-service/sbom-website.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sbom-website-deployment
  namespace: openeuler-sbom-service
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sbom-website
  template:
    metadata:
      labels:
        app: sbom-website
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: sbom-service
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-sbom-website-test:dc20f621d90d23aaad96d9da31b0e2cf6840eeb4
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
