common-applications/test-environment/openeuler-sbom-service/repo-post-verify.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: post-verification-service
  namespace: openeuler-sbom-service
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: post-verification
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-verification-deployment
  namespace: openeuler-sbom-service
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: post-verification
  template:
    metadata:
      labels:
        app: post-verification
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/repo-post-verification-test:b28d7034dfdc1264e659e43a465d21b08ed25df9
        imagePullPolicy: Always
        name: post-verification
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 3000Mi
        volumeMounts:
        - mountPath: /var/log
          name: log-data-volume
      volumes:
      - name: log-data-volume
        persistentVolumeClaim:
          claimName: openeuler-data-volume
