common-applications/test-environment/openeuler-sbom-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbom-service
  namespace: openeuler-sbom-service
spec:
  ports:
  - name: sbom-api-endpoint
    port: 80
    targetPort: 8080
  selector:
    app: sbom-deployment
  type: ClusterIP
