common-applications/test-environment/openeuler-sbom-service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  name: sbom-service-ingress
  namespace: openeuler-sbom-service
spec:
  tls:
    - hosts:
        - sbom-service.test.osinfra.cn
      secretName: sbom-service-tls
  rules:
    - host: sbom-service.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: sbom-website-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  name: sbom-service-backend-ingress
  namespace: openeuler-sbom-service
spec:
  tls:
    - hosts:
        - sbom-service.test.osinfra.cn
      secretName: sbom-service-tls
  rules:
    - host: sbom-service.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: sbom-service
              servicePort: 80
            path: /sbom-api

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openeuler-publish-beta-ingress
  namespace: openeuler-sbom-service
spec:
  tls:
    - hosts:
        - publish-beta-openeuler.test.osinfra.cn
      secretName: openeuler-publish-beta-tls
  rules:
    - host: publish-beta-openeuler.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: post-verification-service
              servicePort: 8080
            path: /
